force-app/main/default/objects/Wholesale_Order_Product__c/Wholesale_Order_Product__c.object-meta.xml
<CustomObject>
    <description>Order rows for Wholesale orders</description>
    <label>Wholesale Order Product</label>
    <nameField>
        <displayFormat>OR-{00000000}</displayFormat>
        <label>Order Product No.</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Wholesale Order Products</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>