force-app/main/default/objects/Wholesale_Order_Product__c/fields/Installation__c.field-meta.xml
<CustomField>
    <fullName>Installation__c</fullName>
    <formula>Installation_Address__r.Installation_Address__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Installation</label>
    <type>Text</type>
</CustomField>