force-app/main/default/objects/Wholesale_Order_Product__c/fields/Installation_Address__c.field-meta.xml
<CustomField>
    <fullName>Installation_Address__c</fullName>
    <label>Installation Address</label>
    <referenceTo>Installation_Address__c</referenceTo>
    <relationshipName>Order_Rows</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>