force-app/main/default/objects/Wholesale_Order_Product__c/fields/Installation_Address_No__c.field-meta.xml
<CustomField>
    <fullName>Installation_Address_No__c</fullName>
    <formula>Installation_Address__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Installation Address No.</label>
    <type>Text</type>
</CustomField>