force-app/main/default/objects/Wholesale_Order_Product__c/fields/Monthly_Charge__c.field-meta.xml
<CustomField>
    <fullName>Monthly_Charge__c</fullName>
    <label>Monthly Charge</label>
    <precision>16</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>