force-app/main/default/objects/Wholesale_Order_Product__c/fields/One_Time_Charge__c.field-meta.xml
<CustomField>
    <fullName>One_Time_Charge__c</fullName>
    <label>One Time Charge</label>
    <precision>16</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>