force-app/main/default/objects/Wholesale_Order_Product__c/fields/Order_Duration_in_Months__c.field-meta.xml
<CustomField>
    <fullName>Order_Duration_in_Months__c</fullName>
    <formula>CASE(Installation_Address__r.Order__r.Order_Duration_in_Months__c,
  &quot;12&quot;, 12,
  &quot;24&quot;, 24,
  &quot;36&quot;, 36,
  &quot;48&quot;, 48,
  &quot;60&quot;, 60,
  &quot;72&quot;, 72,
  &quot;84&quot;, 84,
  &quot;96&quot;, 96,
1)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Order Duration</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>