force-app/main/default/objects/Wholesale_Order_Product__c/fields/Order_Product__c.field-meta.xml
<CustomField>
    <fullName>Order_Product__c</fullName>
    <formula>HYPERLINK(&quot;/lightning/r/Wholesale_Order_Product__c/&quot;&amp;Id&amp;&quot;/view&quot;,Product__c,&quot;_self&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Order Product</label>
    <type>Text</type>
</CustomField>