force-app/main/default/objects/Wholesale_Order_Product__c/fields/Product__c.field-meta.xml
<CustomField>
    <fullName>Product__c</fullName>
    <formula>IF(ISBLANK( Product_Name__c ),
IF(ISPICKVAL( Product_category_2__c , &quot;Location&quot;), 
&quot;Service, Co-lo &quot;&amp; TEXT(Product_category_3__c),
&quot;Service, &quot;&amp; TEXT(Product_category_3__c)),
Product_Name__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Product</label>
    <type>Text</type>
</CustomField>