force-app/main/default/objects/Wholesale_Order_Product__c/fields/Product_category_2__c.field-meta.xml
<CustomField>
    <fullName>Product_category_2__c</fullName>
    <label>Product category 2</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Product_category__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Dark Fiber</fullName>
            </value>
            <value>
                <fullName>Ethernet Nordic</fullName>
            </value>
            <value>
                <fullName>Ethernet Nordic Capacity</fullName>
            </value>
            <value>
                <fullName>Internet</fullName>
            </value>
            <value>
                <fullName>Sea Cable</fullName>
            </value>
            <value>
                <fullName>Location</fullName>
            </value>
            <value>
                <fullName>Power</fullName>
            </value>
            <value>
                <fullName>Special numbers</fullName>
            </value>
            <value>
                <fullName>Service - Colocation</fullName>
            </value>
            <value>
                <fullName>Service - Capacity</fullName>
            </value>
            <value>
                <fullName>Service - Fixed</fullName>
            </value>
            <value>
                <fullName>DN Access Multi Fiber</fullName>
                <isActive>false</isActive>
                <label>DN Access Multi Fiber</label>
            </value>
            <value>
                <fullName>DN Access Multi G.SHDSL</fullName>
                <isActive>false</isActive>
                <label>DN Access Multi G.SHDSL</label>
            </value>
            <value>
                <fullName>DN Access Multi VDSL</fullName>
                <isActive>false</isActive>
                <label>DN Access Multi VDSL</label>
            </value>
            <value>
                <fullName>EPL</fullName>
                <isActive>false</isActive>
                <label>EPL</label>
            </value>
            <value>
                <fullName>Ethernet Local Loop</fullName>
                <isActive>false</isActive>
                <label>Ethernet Local Loop</label>
            </value>
            <value>
                <fullName>Ethernet fiber</fullName>
                <isActive>false</isActive>
                <label>Ethernet fiber</label>
            </value>
            <value>
                <fullName>Fiber</fullName>
                <isActive>false</isActive>
                <label>Fiber</label>
            </value>
            <value>
                <fullName>SLA Platinum</fullName>
                <isActive>false</isActive>
                <label>SLA Platinum</label>
            </value>
            <value>
                <fullName>Service</fullName>
                <isActive>false</isActive>
                <label>Service</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>