force-app/main/default/objects/Wholesale_Order_Product__c/fields/Product_category_3__c.field-meta.xml
<CustomField>
    <fullName>Product_category_3__c</fullName>
    <label>Product category 3</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Product_category_2__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Access EPL</fullName>
                <label>A-EPL</label>
            </value>
            <value>
                <fullName>EPL</fullName>
                <label>E-Line EPL</label>
            </value>
            <value>
                <fullName>Transit E-Line</fullName>
            </value>
            <value>
                <fullName>Dark Fiber</fullName>
            </value>
            <value>
                <fullName>CPE 10GE - 1 CPE</fullName>
                <label>1 CPE - 10G</label>
            </value>
            <value>
                <fullName>CPE 1GE - 1 CPE</fullName>
                <label>1 CPE 1G</label>
            </value>
            <value>
                <fullName>CPE 1GE - 2 CPE</fullName>
                <label>2 CPE 1G</label>
            </value>
            <value>
                <fullName>Fiber 2Mb</fullName>
                <label>2Mb</label>
            </value>
            <value>
                <fullName>Fiber 10Mb</fullName>
                <label>10Mb</label>
            </value>
            <value>
                <fullName>Fiber 20Mb</fullName>
                <label>20Mb</label>
            </value>
            <value>
                <fullName>Fiber 30Mb</fullName>
                <label>30Mb</label>
            </value>
            <value>
                <fullName>Fiber 50Mb</fullName>
                <label>50Mb</label>
            </value>
            <value>
                <fullName>Fiber 100Mb</fullName>
                <label>100Mb</label>
            </value>
            <value>
                <fullName>Fiber 200Mb</fullName>
                <label>200Mb</label>
            </value>
            <value>
                <fullName>Fiber 300Mb</fullName>
                <label>300Mb</label>
            </value>
            <value>
                <fullName>Fiber 500Mb</fullName>
                <label>500Mb</label>
            </value>
            <value>
                <fullName>Fiber 1Gb</fullName>
                <label>1Gb</label>
            </value>
            <value>
                <fullName>Fiber 2Gb</fullName>
                <label>2Gb</label>
            </value>
            <value>
                <fullName>Fiber 2,5Gb</fullName>
                <label>2,5Gb</label>
            </value>
            <value>
                <fullName>Fiber 4Gb</fullName>
                <label>4Gb</label>
            </value>
            <value>
                <fullName>Fiber 6Gb</fullName>
                <label>6Gb</label>
            </value>
            <value>
                <fullName>Fiber 7Gb</fullName>
                <label>7Gb</label>
            </value>
            <value>
                <fullName>Fiber 8Gb</fullName>
                <label>8Gb</label>
            </value>
            <value>
                <fullName>Fiber 10Gb</fullName>
                <label>10Gb</label>
            </value>
            <value>
                <fullName>QOS - ALL BC+</fullName>
                <label>ALL BC+</label>
            </value>
            <value>
                <fullName>COS BC+</fullName>
            </value>
            <value>
                <fullName>QOS - BC+</fullName>
            </value>
            <value>
                <fullName>QOS - BE+</fullName>
                <label>BE+</label>
            </value>
            <value>
                <fullName>Access EPL, DH ENNI</fullName>
                <label>EPL, DH ENNI</label>
            </value>
            <value>
                <fullName>EVP-LAN</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>