force-app/main/default/objects/Wholesale_Order_Product__c/fields/Product_category__c.field-meta.xml
<CustomField>
    <fullName>Product_category__c</fullName>
    <label>Product category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Capacity</fullName>
            </value>
            <value>
                <fullName>Colocation</fullName>
            </value>
            <value>
                <fullName>Fixed</fullName>
            </value>
            <value>
                <fullName>Hardware</fullName>
                <isActive>false</isActive>
                <label>Hardware</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>