force-app/main/default/objects/Wholesale_Order_Product__c/fields/Total__c.field-meta.xml
<CustomField>
    <fullName>Total__c</fullName>
    <formula>TEXT(ROUND(Total_Order_Product_Value__c/1000,1) )&amp;&quot;k &quot;&amp; TEXT( Currency__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total</label>
    <type>Text</type>
</CustomField>