force-app/main/default/objects/Wholesale_Order_Product__c/fields/Total_Monthly_Charge__c.field-meta.xml
<CustomField>
    <fullName>Total_Monthly_Charge__c</fullName>
    <formula>IF( Cancelled__c,0, Monthly_Charge__c *  Quantity__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Monthly Charge</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>