force-app/main/default/objects/Wholesale_Order_Product__c/fields/Total_One_Time_Charge__c.field-meta.xml
<CustomField>
    <fullName>Total_One_Time_Charge__c</fullName>
    <formula>One_Time_Charge__c *  Quantity__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total One Time Charge</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>