force-app/main/default/objects/Wholesale_Order_Product__c/fields/Total_Order_Product_Value__c.field-meta.xml
<CustomField>
    <fullName>Total_Order_Product_Value__c</fullName>
    <formula>IF( Cancelled__c,0, ((Monthly_Charge__c * Quantity__c) *  Order_Duration_in_Months__c) + (One_Time_Charge__c*Quantity__c))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Order Product Value</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>