force-app/main/default/objects/Wholesale_Order_Product__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>Order_Product__c</columns>
    <columns>Installation__c</columns>
    <columns>Comment__c</columns>
    <columns>Total__c</columns>
    <columns>Cancelled__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>